<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/textview_nombre"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/textview_apellido"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextDiviendo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/textview_dividendo"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextDivisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/textview_divisor"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextParteEntera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/textview_parteentera"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextResiduo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/textview_residuo"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextNInvertido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/textview_numeroInvertido"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonSigueinte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickNextPage"
        android:text="@string/buttonSiguiente" />

    <Button
        android:id="@+id/buttonShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonResultados" />
</LinearLayout>